# liee

./: .gitignore  INSTALL  LICENSE  Makefile.am  README.md  configure.ac
c++/liee/: app_opti_wrap.cpp  downhill_simplex.cpp  downhill_simplex.hpp  libliee.cpp  libliee.hpp  module_config.cpp  module_config.hpp  module_factory.hpp  my_util.cpp  my_util.hpp  noumerov.cpp  noumerov.hpp  objective_functions.hpp  observer.cpp  observer.hpp  optimization_scheduler.cpp  optimization_scheduler.hpp  optimization_tester.cpp  optimizer.cpp  optimizer.hpp  potential.cpp  potential.hpp  solver.cpp  solver.hpp  wave_function.cpp  wave_function.hpp
c++/sched/: liee_assimilator.cpp  liee_work_generator.cpp
gnuplot/: anim_Psi(r)_t.gp  anim__Psi(r),V(r)__(t).gp  anim__wigner.gp  liee_macros.gp  matrix-Psi(r,t),V(r).gp  multiplot.gp  potential_V(r).gp  potential_V(r)_@t.gp  spectrum.gp  sub_V(r)_@t.gp  sub_V(r)_@ttt.gp  sub_V(t),J(t).gp  sub_matrix-Psi(r,t).gp  sub_matrix-wigner.gp  sub_matrix-wigner_@t.gp  sub_snapshot_Psi(r),V(r)_@t.gp  sub_snapshot_Psi(r).gp
lib/: Makefile.am  downhill_simplex.cpp  libliee.cpp  libliee.hpp  module_config.cpp  my_util.cpp  noumerov.cpp  observer.cpp  optimizer.cpp  potential.cpp  solver.cpp  wave_function.cpp
liee/: Makefile.am  app_opti_wrap.cpp  downhill_simplex.cpp  downhill_simplex.hpp  liee_tests.cpp  liee_worker.cpp  module_config.hpp  module_factory.hpp  my_util.cpp  my_util.hpp  noumerov.hpp  objective_functions.hpp  observer.cpp  observer.hpp  optimization_tester.cpp  optimizer.cpp  optimizer.hpp  potential.cpp  wave_function.cpp  wave_function.hpp
liee/lib/: Makefile.am  downhill_simplex.cpp  libliee.hpp  module_config.cpp  my_util.cpp  noumerov.cpp  observer.cpp  optimizer.cpp  testlib.cpp  wave_function.cpp
python/tools/: extract_result_data.py  liee_tools.py  plot_swarming.py  plotter_noumerov.py  snapshot_plotter.py  snapshot_plotter2.py  to_grid.py
sched/: liee_work_generator.cpp  optimization_scheduler.hpp  optimization_tester.cpp
tools/: extract_result_data.py  liee_tools.py
workunit_templates/: liee_parameter-1.21.xml  liee_parameter-1.22.xml  liee_parameter-1.23.xml  liee_parameter-1.24.xml  liee_parameter-1.25.xml
